create select options with counts in crear-asiento.ejs

--- a/src/views/addCount.ejs
+++ b/src/views/addCount.ejs
@@ -5,7 +5,17 @@
 
 </pre>
 
-<h1>hola</h1>
+<div>
+    <a href="/addCount">Crear Cuenta</a>
+    <a href="/crear-asiento">Crear Asiento</a>
+    <a href="/ver-libros">Ver Libros</a>
+</div>
+<br>
+<br>
+<br>
+<br>
+
+
 <form action="/addCount" method="post">
     <input type="text" name="name" placeholder="Nombre de cuenta">
 
@@ -17,6 +27,7 @@
     </select>
     <button type="submit">Crear</button>
 
+</form>
 </form>
 
 <table>
