--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -4,6 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>Sistema Contable</title>
+
+    <style>#checkboxes {
+  display: none;
+  border: 1px #dadada solid;
+}
+
+#checkboxes label {
+  display: block;
+}
+
+#checkboxes label:hover {
+  background-color: #1e90ff;
+}</style>
 </head>
 
 <body>
