test with JSON.stringify

--- a/src/views/crear-asiento.ejs
+++ b/src/views/crear-asiento.ejs
@@ -75,7 +75,7 @@
         <input type="date" name="fecha">
         <br>
         <br>
-        <!-- <input type="text" id = ctas name="cuenta" value= allInfo > -->
+        <input type="text" id = ctas name="cuenta" value= allInfo >
         <button type="submit" >crear asiento</button>
         <!-- <button type="submit" onClick="insertar()">crear asiento</button> -->
 
