check partida doble

--- a/src/views/crear-asiento.ejs
+++ b/src/views/crear-asiento.ejs
@@ -30,7 +30,9 @@
     <br>
     <br>
     <input type="hidden" id = ctas name="cuenta" value= allInfo >
-    <button type="submit" style = "position: absolute; bottom: 2em">crear asiento</button>
+    <!-- <button type="submit" style = "position: absolute; bottom: 2em">crear asiento</button> -->
+     <input type="button" value="crear asiento" onClick="asientoSubmit()">
+
 </form>
 
 <form action="/crear-asiento" method="post">
