--- a/src/views/crear-asiento.ejs
+++ b/src/views/crear-asiento.ejs
@@ -30,8 +30,8 @@
     <br>
     <br>
     <input type="hidden" id = ctas name="cuenta" value= allInfo >
-    <button type="submit" style = "position: absolute; bottom: 2em" onClick="asientoSubmit()">crear asiento</button>
-     <!-- <input type="button" value="crear asiento" onClick="asientoSubmit()"> -->
+    <!-- <button type="submit" style = "position: absolute; bottom: 2em" onClick="asientoSubmit()">crear asiento</button> -->
+     <input type="button" value="crear asiento" onClick="asientoSubmit()">
 
 </form>
 
@@ -84,7 +84,12 @@
                 <table style="width: 100%">
                     <% for(var j=0; j < nvo_asiento[i].cuenta.length; j++) { %> 
                 <tr>
+                    <%if(nvo_asiento[i].cuenta[j].debe=="debe"){%>
                     <td style = "width: 25%"><strong><%= nvo_asiento[i].cuenta[j].nombre %></strong></td>
+                    <%}%>
+                    <%if(nvo_asiento[i].cuenta[j].haber=="haber"){%>
+                    <td style = "width: 25%"><strong style="margin-left: 3rem"><%= nvo_asiento[i].cuenta[j].nombre %></strong></td>
+                    <%}%>
                     <%if(nvo_asiento[i].cuenta[j].debe=="debe"){%>
                     <td style = "width: 25%"><strong><%= nvo_asiento[i].cuenta[j].importe %></strong></td>
                     <%}else {%>
