--- a/src/views/crear-asiento.ejs
+++ b/src/views/crear-asiento.ejs
@@ -12,7 +12,7 @@
 <div>
     <a href="/addCount">Crear Cuenta</a>
     <a href="/crear-asiento">Crear Asiento</a>
-    <a href="/ver-libros">Ver Libros</a>
+    <a href="/libro-mayor">Libro mayor</a>
 </div>
 <br>
 <br>
