--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 <div>
     <a href="/addCount">Crear Cuenta</a>
     <a href="/crear-asiento">Crear Asiento</a>
-    <a href="/ver-libros">Ver Libros</a>
+    <a href="/libro-mayor">Ver Libros</a>
 </div>
 
 <% include partials/_footer%>
