--- a/src/views/libro-mayor.ejs
+++ b/src/views/libro-mayor.ejs
@@ -2,4 +2,10 @@
 <pre>
         <%= nvo_asiento %>
 </pre> 
+
+<div>
+    <a href="/addCount">Crear Cuenta</a>
+    <a href="/crear-asiento">Crear Asiento</a>
+    <a href="/libro-mayor">Libro mayor</a>
+</div>
 <% include partials/_footer%>
