--- a/src/views/libro-mayor.ejs
+++ b/src/views/libro-mayor.ejs
@@ -8,4 +8,67 @@
     <a href="/crear-asiento">Crear Asiento</a>
     <a href="/libro-mayor">Libro mayor</a>
 </div>
+
+<h1>Libro Mayor</h1>
+<form action="/libro-mayor" method="post">
+    <select name='nombre' id='nomLMyr' onchange="location = this.value;" >
+        <option value="" selected disabled hidden>Elija Cuenta</option>
+
+        <% for(var i=0; i < nvo_asiento.length; i++) { %>
+            <% for(var j=0; j < nvo_asiento[i].cuenta.length; j++) { %>
+        <option value="<%= nvo_asiento[i].cuenta[j].nombre %>"><%= nvo_asiento[i].cuenta[j].nombre %></option>
+        <% } %>
+        <% } %>
+    </select>
+</form>
+
+<script src="/libromayor.js"></script>
+<!-- <script src="/crearasiento.js"></script> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <% include partials/_footer%>
