--- a/src/views/libro-mayor.ejs
+++ b/src/views/libro-mayor.ejs
@@ -1,7 +1,4 @@
 <% include partials/_header %>
-<pre>
-        <%= nvo_asiento %>
-</pre> 
 
 <div>
     <a href="/addCount">Crear Cuenta</a>
@@ -16,7 +13,7 @@
 
         <% for(var i=0; i < nvo_asiento.length; i++) { %>
             <% for(var j=0; j < nvo_asiento[i].cuenta.length; j++) { %>
-        <option value="<%= nvo_asiento[i].cuenta[j].nombre %>"><%= nvo_asiento[i].cuenta[j].nombre %></option>
+        <option value="/libro-mayo/<%= nvo_asiento[i].cuenta[j].nombre %>"><%= nvo_asiento[i].cuenta[j].nombre %></option>
         <% } %>
         <% } %>
     </select>
