--- a/src/views/libro-mayor-ctas.ejs
+++ b/src/views/libro-mayor-ctas.ejs
@@ -1,8 +1,12 @@
 <% include partials/_header %>
+
 <pre>
         <%= lmayor %>
 </pre>
 
+<pre>
+        <%= count_name %>
+</pre>
 <table border="1">
     <thead>
         <tr>
@@ -13,36 +17,54 @@
             <th style="width: 10%">saldo</th>
         </tr>
     </thead>
-        <tbody>
-            <% for(var i=0; i < lmayor.length; i++) { %>
-            <tr>
 
-                <!-- <td><%= i + 1%></td> -->
-                <td><%= lmayor[i].numero_asiento %></td>
-                <!-- <td><strong><%= lmayor[i].numero_asiento %></strong></td> -->
-                <td><strong><%=  lmayor[i].fecha %></strong></td>
-                 <% for(var j=0; j < lmayor[i].cuenta.length; j++) { %>
-                    <%if(lmayor[i].cuenta[j].debe=="debe"){%>
-                    <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong></td>
-                    <%}else {%>
-                    <td style="width: 25%"><strong></strong></td>
-                    <%}%>
-                    <%if(lmayor[i].cuenta[j].haber=="haber"){%>
-                    <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong></td>
-                    <%} else{%>
-                    <td style="width: 25%"><strong></strong></td>
-                    <%}%>
-                    <%}%>
-        
-          
-            
-        
-        
-        
-            </tr>
-            <% } %>
-        </tbody>
-        </table>
+    <tbody>
+        <% for(var i=0; i < lmayor.length; i++) { %>
+         <% for(var j=0; j < lmayor[i].cuenta.length; j++) { %>
+            <tr>
+            <%if(lmayor[i].cuenta[j].nombre==count_name){%>
+            <!-- <td><%= i + 1%></td> -->
+            <td><%= lmayor[i].numero_asiento %></td>
+            <!-- <td><strong><%= lmayor[i].numero_asiento %></strong></td> -->
+            <td><strong><%=  lmayor[i].fecha.getDate() + '/'+(lmayor[i].fecha.getMonth()+1) +'/' +lmayor[i].fecha.getFullYear() %></strong>
+            </td>
+    
+    
+                <%if(lmayor[i].cuenta[j].debe=="debe"){%>
+                <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong></td>
+                <%}else {%>
+                <td style="width: 25%"><strong></strong></td>
+                <%}%>
+                <%if(lmayor[i].cuenta[j].haber=="haber"){%>
+                <td style="width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong></td>
+                <%} else{%>
+                <td style="width: 25%"><strong></strong></td>
+                <%}%>
+                <!-- <td style = "width: 25%"><strong><%= lmayor[i].cuenta[j].importe %></strong>
+            </td> -->
+    
+        <% } %>
+    
+    
+    
+        </tr>
+        <% } %>
+        <% } %>
+    </tbody>
+    </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
