--- a/src/views/libro-mayor-ctas.ejs
+++ b/src/views/libro-mayor-ctas.ejs
@@ -41,23 +41,28 @@
                 <%} else{%>
                     <td style="width: 25%"><strong></strong></td>
                 <%}%>
+
                 <%if(lmayor[i].cuenta[j].debe=="debe"){%>
-                    <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong>
+                    <%if(lmayor[i].cuenta[j].tipo=="ACTIVO"){%>
+                        <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong></td>
                         <%  saldoSum = parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %>
+                    <% } else{%> 
+                        <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong></td>
+                        <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
+                    <% } %>
                 <% } %>
                 <%if(lmayor[i].cuenta[j].haber=="haber"){%>
-                    <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong>
-                    <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
-                 <% } %>
-                 </td>
-    
-               
+                    <%if(lmayor[i].cuenta[j].tipo=="ACTIVO"){%>
+                        <td style="width: 25%"><strong><%= saldoSum - lmayor[i].cuenta[j].importe %></strong></td>
+                        <%  saldoSum = parseInt(saldoSum) - parseInt(lmayor[i].cuenta[j].importe) %>
+                    <% } else{%>
+                        <td style="width: 25%"><strong><%= parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %></strong></td>
+                        <%  saldoSum = parseInt(lmayor[i].cuenta[j].importe) + parseInt(saldoSum) %>
+                    <% } %>
+                <% } %>               
+            <% } %>   
+            </tr>
             <% } %>
-    
-                        
-    
-        </tr>
-        <% } %>
         <% } %>
     </tbody>
     </table>
